--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 </head>   
     
 <body>
-<div class="font"> Jose 
-    </div>
-<div class="container">
-    </div>
+
 <div class="blue">
     </div>
 <div class="green">
     </div>
 <div class="green2">
     </div>
+<div class="green3">
+    </div>
+<div class="greenbottom">
+    </div>
+<div class="greenbottom2">
+    </div>
+<div class="greenbottom3">
+    </div>
 </body>
 </html>
-
-
 
 
 
